--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <br>
             <a href="week1.html">Week 1 Reading Responses</a>
             
+            <br>
+            <a href="week2.html">Week 2 Ways of Seeing</a>
         </main>
     </body>
 </html>
