--- a/week2.html
+++ b/week2.html
@@ -44,6 +44,9 @@
                 put disparate unrelated things together suddenly … in your frame, its context</p>
             <img src="sunchasers.jpg">
 
+            <p>“Broken Plate, Paris” 1929 by Andre Kertesz</p>
+            <img src="shattered_glass.jpg">
+
 
             </main>
     </body>
