--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 
 <html>
     <head>
-        <title>Winnie Zheng Web Dev Portfolio!</title>
+        <meta name="viewport" content = "width=device-width, inital-scale=1.0">
+        <title>Winnie Zheng's Web Development Portfolio</title>
+        <link rel='stylesheet' type ='text/css' href='theStyle.css'>
     </head>
 
     <body>
         <main>
-            <h2>Winnie Zheng Web Dev Portfolio</h2>
+            <div class ="header">
+                <h2 >Web Development</h2>
+                <h3 id="author">Winnie Zheng</h3>
+            </div>
 
-            <h2>List of Assignments</h2>
-            <br>
-            <a href="week1.html">Week 1 Reading Responses</a>
-            
-            <br>
-            <a href="week2.html">Week 2 Ways of Seeing</a>
+            <div class = "content-container">
+                <h4 class = 'content-scroll-page'><a href="week1.html">Week 1: Long Live the Web</a></h4>
+                <h4 class = 'content-scroll-page'><a href="week2.html">Week 2: Ways of Seeing</a></h4>
+            </div>
         </main>
     </body>
 </html>
