--- a/week2.html
+++ b/week2.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
+
     <head>
+        <meta name="viewport" content = "width=device-width, inital-scale=1.0">
         <title>John Berger - Ways of Seeing</title>
     </head>
 
