--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta name="viewport" content = "width=device-width, inital-scale=1.0">
+        <meta charset="utf-8">
         <title>Winnie Zheng's Web Development Portfolio</title>
         <link rel='stylesheet' type ='text/css' href='theStyle.css'>
     </head>
