--- a/week4.html
+++ b/week4.html
@@ -12,6 +12,9 @@
     <body>
         <main>
             <!-- brown and sage fav color -->
+            <div>
+                <h2 class= 'name'>Kai</h2>
+            </div>
 
             <div class = "left_eye" >
                  <img src="egg.png">
