--- a/week6/moire.html
+++ b/week6/moire.html
@@ -10,7 +10,12 @@
 
     <body>
         <main>
-            
+            <div class ="header">
+                <h1>the_moire_effect</h1>
+                <div class = 'back_button' >
+                    <a href = "index.html" style= "text-decoration: none"> <h3>back</h3> </a>
+                </div>
+            </div>
 
             
         </main>
