--- a/week6/index.html
+++ b/week6/index.html
@@ -11,7 +11,9 @@
     <body>
         <main>
             <div class ="header">
-                <h1>Out 4 Pizza</h1>
+                <a href= "https://out4pizza.com" >
+                    <h1 id = "home_title">OUT_4_PIZZA</h1>
+                </a>
                 <h3 id="author">Kai Jin and Winnie Zheng</h3>
             </div>
 
