--- a/week6/the_midnight_hour.html
+++ b/week6/the_midnight_hour.html
@@ -10,9 +10,13 @@
 
     <body>
         <main>
-            
-
-            
+            <div class ="header">
+                <h1>the_midnight_hour</h1>
+                <div class = 'back_button' >
+                    <a href = "index.html" style= "text-decoration: none"> <h3>back</h3> </a>
+                </div>
+            </div>
+  
         </main>
     </body>
 </html>
