daisy and implemented flex containers

--- a/week6/the_midnight_hour.html
+++ b/week6/the_midnight_hour.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <div class ="header">
-                <h1>the_midnight_hour</h1>
+                <h1>THE_MIDNIGHT_HOUR</h1>
                 <div class = 'back_button' >
                     <a href = "index.html" style= "text-decoration: none"> <h3>back</h3> </a>
                 </div>
