--- a/week6/daisy_dilly.html
+++ b/week6/daisy_dilly.html
@@ -19,9 +19,9 @@
 
         <div class = "container" >
             <div  class = "flex_object" id = "daisy_img">
-                <img src = 'DAISY_DILLY.png' width="500">
+                <img src = 'DAISY_DILLY.png' width="600">
             </div>
-            <div class = 'flex_object'>
+            <div class = 'flex_text'>
                 <p>Brothers explores "painting" with the computer in her art. 
                     Her work embraces the organic roots of digital pixel display. Her aesthetic integrates 
                     both that and the moire effect, creating a unique effect. 
@@ -30,11 +30,11 @@
             </div>
 
             <div  class = "flex_object" id = "daisy_img">
-                <img src = 'DRIPES.png' width="500">
+                <img src = 'DRIPES.png' width="600">
             </div>
 
-            <div class = 'flex_object'>
-                <p>Her most recents work explores the illusion of moving digitalization of 2-dimensional media art. 
+            <div class = 'flex_text'>
+                <p>Her most recent work explores the illusion of moving digitalization of 2-dimensional media art. 
                     She allows her viewers to interact with her static art by combining the illusion of the moire effect 
                     with human computer interaction of the digital world. 
                     </p>
