--- a/week6/moire.html
+++ b/week6/moire.html
@@ -10,13 +10,28 @@
 
     <body>
         <main>
-            <div class ="header">
+            <div class = "header">
                 <h1>THE_MOIRE_EFFECT</h1>
                 <div class = 'back_button' >
                     <a href = "index.html" style= "text-decoration: none"> <h3>back</h3> </a>
                 </div>
             </div>
 
+            <div class = "textbox" id = "moiredef">
+                <p>
+                    Moire —  an illusion that occurs when a fine pattern (lines and dots)
+                     are specifically hashed with another similar pattern, 
+                     ultimately forming a third visual. 
+                </p>
+            </div>
+
+            <div class = 'images' id='moire1'>
+                    <img src = 'moirepic.png' width="450" height=auto>                
+            </div>
+
+            <div class = 'images' id='moire2'>
+                <img src = 'moire2.jpg' width="1000" height="280">                
+        </div>
             
         </main>
     </body>
