--- a/week6/the_midnight_hour.html
+++ b/week6/the_midnight_hour.html
@@ -16,6 +16,41 @@
                     <a href = "index.html" style= "text-decoration: none"> <h3>back</h3> </a>
                 </div>
             </div>
+
+            <div class = 'textbox' id = "midnight_text">
+                <p>"I look at my old (>1 yrs old) work much less than I should. Really, I don't much at all.
+                    I avoid it. I don't like it?" 
+                 </p>
+            </div>
+
+            <div class = "container">
+                <div  class = "flex_object" id = "daisy_img">
+                    <img src = 'romancingthestoners.gif' width="600">
+                    <h2>romancing the stoners. 2008-04-18.</h2>
+                </div>
+    
+                <div  class = "flex_object" id = "daisy_img">
+                    <img src = 'RoboPopFloatVoid.gif' width="600">
+                    <h2>RoboPopFloatVoid. 2008-12-10.</h2>
+                </div>
+
+                <div  class = "flex_object" id = "daisy_img">
+                    <img src = 'rockononetime.gif' width="600">
+                    <h2>rockononetime. 2009-12-01.</h2>
+                </div>
+
+                <div  class = "flex_object" id = "daisy_img">
+                    <img src = 'HENRYBLUEROOM.png' width="600">
+                    <h2>HENRYBLUEROOM. 2014-08-21.</h2>
+                </div>
+                
+                <div class = 'textbox' id = "midnight_text">
+                    <p>Brothers' past work offers insightful observation into her thought process
+                        and how she evolved her art over time. Her fascination with 'the pixel' has
+                        since curated a distinctly nostalgic art towards net users for decades to come. 
+                    </p>
+                </div>
+            </div>
   
         </main>
     </body>
