--- a/week6/index.html
+++ b/week6/index.html
@@ -17,34 +17,37 @@
                 <h3 id="author">Kai Jin and Winnie Zheng</h3>
             </div>
 
-            <div class = 'textbox' id = "introduction1">
-                <p>Laura Brothers creates digital experiences through her LiveJournal blog, 
-                    out_4_pizza.com. Her work is heavily inspired by the early ages of the internet, 
-                    emphasizing the pixelated display. 
-                </p>
-            </div>
+            <div class = 'container'>
 
-            <div class = 'images' id='image1'>
-                <a href= "daisy_dilly.html" >
-                    <img src = 'DAISY_DILLY.png' width="650" height=auto>
-                </a>
-                
-            </div>
+                <div class = 'flex_object' >
+                    <a href= "daisy_dilly.html" >
+                        <img src = 'DAISY_DILLY.png' width="600" >
+                    </a>
+                    <h2>DAISY_DILLY. 2021-12-30.</h2>
+                </div>
 
-            <div class = 'textbox' id = "introduction2">
-                <p>Brothers is one of the first net artists to utilize scrolling and zooming, 
-                    which takes effective advantage of tools exclusive to the online user. 
-                    These interactive elements create the stimulating motion of the <a href="moire.html">moire effect</a>.
-                </p>
-            </div>
+                <div class = 'flex_text' >
+                    <p>Laura Brothers creates digital experiences through her LiveJournal blog, 
+                        out_4_pizza.com. She loves the display of glitch work, 
+                        which she describes as "glorifying malfunction." 
+                    </p>
+                </div>
 
-            <div class = 'images' id='image2'>
-                <a href= "the_midnight_hour.html"> 
-                    <img src = 'the_midnight_hour.jpg' width = '600'>
-                </a>
-            </div>
+                <div class = 'flex_text' >
+                    <p>Brothers is one of the first net artists to utilize scrolling and zooming, 
+                        which takes effective advantage of tools exclusive to the online user. 
+                        These interactive elements create the stimulating motion of the <a href="moire.html">moire effect</a>.
+                    </p>
+                </div>
 
+                <div class = 'flex_object' >
+                    <a href= "the_midnight_hour.html"> 
+                        <img src = 'the_midnight_hour.jpg' width = '600'>
+                    </a>
+                    <h2>the midnight hour. 2007-09-24.</h2>
+                </div>
+        </div>
             
         </main>
     </body>
-</html>
+</html> 
