organized into assets and pages

--- a/week6/pages/daisy_dilly.html
+++ b/week6/pages/daisy_dilly.html
@@ -19,7 +19,7 @@
 
         <div class = "container" >
             <div  class = "flex_object" id = "daisy_img">
-                <img src = 'DAISY_DILLY.png' width="600">
+                <img src = '../assets/DAISY_DILLY.png' width="600">
             </div>
             <div class = 'flex_text'>
                 <p>Brothers explores "painting" with the computer in her art. 
@@ -30,7 +30,7 @@
             </div>
 
             <div  class = "flex_object" id = "daisy_img">
-                <img src = 'DRIPES.png' width="600">
+                <img src = '../assets/DRIPES.png' width="600">
             </div>
 
             <div class = 'flex_text'>
@@ -45,19 +45,19 @@
 
         <div class = "collage_container">
             <div  class = "collage_flex_object" >
-                <img src = 'RUNNY_RENE.png' width="400">
+                <img src = '../assets/RUNNY_RENE.png' width="400">
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'CLOWNTOWN.png' width="400">
+                <img src = '../assets/CLOWNTOWN.png' width="400">
             </div>
         
             <div  class = "collage_flex_object" >
-                <img src = 'REDROOFINN.png' width="400">
+                <img src = '../assets/REDROOFINN.png' width="400">
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'CLOWNTOWN.png' width="400">
+                <img src = '../assets/CLOWNTOWN.png' width="400">
             </div>
 
             <div class = "collage_flex_object">
@@ -65,19 +65,19 @@
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'MARGARINEIT.png' width="400">
+                <img src = '../assets/MARGARINEIT.png' width="400">
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'FACELOCK.png' width="400">
+                <img src = '../assets/FACELOCK.png' width="400">
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'BABYBLUE.png' width="400">
+                <img src = '../assets/BABYBLUE.png' width="400">
             </div>
 
             <div  class = "collage_flex_object" >
-                <img src = 'OBBLUE.png' width="400">
+                <img src = '../assets/OBBLUE.png' width="400">
             </div>
             
         </div>
