--- a/week6/pages/index.html
+++ b/week6/pages/index.html
@@ -21,7 +21,7 @@
 
                 <div class = 'flex_object' >
                     <a href= "daisy_dilly.html" >
-                        <img src = 'DAISY_DILLY.png' width="600" >
+                        <img src = '../assets/DAISY_DILLY.png' width="600" >
                     </a>
                     <h2>DAISY_DILLY. 2021-12-30.</h2>
                 </div>
@@ -42,7 +42,7 @@
 
                 <div class = 'flex_object' >
                     <a href= "the_midnight_hour.html"> 
-                        <img src = 'the_midnight_hour.jpg' width = '600'>
+                        <img src = '../assets/the_midnight_hour.jpg' width = '600'>
                     </a>
                     <h2>the midnight hour. 2007-09-24.</h2>
                 </div>
