--- a/week6/pages/moire.html
+++ b/week6/pages/moire.html
@@ -26,11 +26,11 @@
             </div>
 
             <div class = 'images' id='moire1'>
-                    <img src = 'moirepic.png' width="450" height=auto>                
+                    <img src = '../assets/moirepic.png' width="450" height=auto>                
             </div>
 
             <div class = 'images' id='moire2'>
-                <img src = 'moire2.jpg' width="1000" height="280">                
+                <img src = '../assets/moire2.jpg' width="1000" height="280">                
         </div>
             
         </main>
