--- a/week6/pages/the_midnight_hour.html
+++ b/week6/pages/the_midnight_hour.html
@@ -25,22 +25,22 @@
 
             <div class = "container">
                 <div  class = "flex_object" id = "daisy_img">
-                    <img src = 'romancingthestoners.gif' width="600">
+                    <img src = '../assets/romancingthestoners.gif' width="600">
                     <h2>romancing the stoners. 2008-04-18.</h2>
                 </div>
     
                 <div  class = "flex_object" id = "daisy_img">
-                    <img src = 'RoboPopFloatVoid.gif' width="600">
+                    <img src = '../assets/RoboPopFloatVoid.gif' width="600">
                     <h2>RoboPopFloatVoid. 2008-12-10.</h2>
                 </div>
 
                 <div  class = "flex_object" id = "daisy_img">
-                    <img src = 'rockononetime.gif' width="600">
+                    <img src = '../assets/rockononetime.gif' width="600">
                     <h2>rockononetime. 2009-12-01.</h2>
                 </div>
 
                 <div  class = "flex_object" id = "daisy_img">
-                    <img src = 'HENRYBLUEROOM.png' width="600">
+                    <img src = '../assets/HENRYBLUEROOM.png' width="600">
                     <h2>HENRYBLUEROOM. 2014-08-21.</h2>
                 </div>
                 
