--- a/week6/pages/index.html
+++ b/week6/pages/index.html
@@ -14,7 +14,8 @@
                 <a href= "https://out4pizza.com" >
                     <h1 id = "home_title">OUT_4_PIZZA</h1>
                 </a>
-                <h3 id="author">Kai Jin and Winnie Zheng</h3>
+                <a href = "reactions.html"><h3 id="author">Kai Jin and Winnie Zheng</h3></a>
+                
             </div>
 
             <div class = 'container'>
@@ -27,7 +28,7 @@
                 </div>
 
                 <div class = 'flex_text' >
-                    <p>Laura Brothers creates digital experiences through her LiveJournal blog, 
+                    <p><a href="author.html">Laura Brothers</a> creates digital experiences through her LiveJournal blog, 
                         out_4_pizza.com. She loves the display of glitch work, 
                         which she describes as "glorifying malfunction." 
                     </p>
