--- a/week6/pages/author.html
+++ b/week6/pages/author.html
@@ -19,7 +19,7 @@
 
         <div class = "author_container" >
             <div class = "author_container_object" style="border-color: #ca9879" >
-                <img src = "../assets/laurabro1.jpg" >
+                <img src = "../assets/laurabro1.jpg" width="800" >
             </div>
 
             <div class = "author_container_object" style="border-color: #7985ca">
