--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class = "content-container">
                 <h4 class = 'content-scroll-page'><a href="week1.html">Week 1: Long Live the Web</a></h4>
                 <h4 class = 'content-scroll-page'><a href="week2.html">Week 2: Ways of Seeing</a></h4>
+                <h4 class = 'content-scroll-page'><a href = "/week6/pages">Week 6: Out 4 Pizza</a></h4>
             </div>
         </main>
     </body>
