--- a/week10/index.html
+++ b/week10/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content = "width=device-width, inital-scale=1.0">
         <meta charset="utf-8">
-        <title>CODE</title>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
         <link rel='stylesheet' type ='text/css' href='theStyle.css'>
         <script src="theMedium.js" defer></script>
     </head>
@@ -19,7 +19,7 @@
             </div>
             <div class= "button_container"> 
                 
-                <button id = "red" class="point">red</button>
+                <button id = "red" class="point"></button>
                 <button id = "green" class="point"></button>
                 <button id = "blue" class="point"></button>
             </div>
