--- a/week11/index.html
+++ b/week11/index.html
@@ -16,8 +16,27 @@
             <h1>Play with Boo!</h1>
 
             <div class = "game_container">
-                <div id= "ghost">Ghost</div>
+                <div id = "status_bar">
+                    <img src = "assets/redbar.PNG">
+                </div>
+
+                <div id = "ghost">
+                    <img id = "ghost_img" src="assets/normalboo.PNG"> 
+                </div>
+
+
+                <div class = 'action_buttons_container'>
+                    <div id = "love"><img src="assets/heartbutton.PNG"></div>
+                    <div id = "chat"><img src= "assets/chatbutton.PNG"></div>
+                    <div id = "music"><img src = "assets/musicbutton.PNG"></div>
+                </div>
+
+                <div id = "text">TEXT</div>
+
             </div>
+
+
+
 
         </main>
     </body>
