--- a/week11/index.html
+++ b/week11/index.html
@@ -29,7 +29,7 @@
                 </div>
 
 
-                <div id = "clock"><img src="assets/clock.PNG"></div>
+                <div id = "clock"><img src="assets/clock.png"></div>
 
                 <div class = 'action_buttons_container'>
                     <div id = "love"><img src="assets/heartbutton.PNG"></div>
