audios and name page

--- a/week11/main.html
+++ b/week11/main.html
@@ -13,25 +13,28 @@
     <body>
         <main>
             
-            <h1>Play &nbsp;&nbsp;with &nbsp;&nbsp;Me!</h1>
+            <h1>Play &nbsp;&nbsp;with &nbsp;&nbsp;Boo!</h1>
 
             <div id = "game_container">
-
-                <div id = "name_text">
-                    Hi! &nbsp;&nbsp;Please &nbsp;&nbsp;name &nbsp;&nbsp; me.
-                </div>
                 
+
+                <div id = "status_bar">
+                    <img id = "status_img" src="assets/redbar.PNG">
+                </div>
 
                 <div id = "ghost">
                     <img id = "ghost_img" src="assets/normalboo.PNG"> 
                 </div>
 
-                <div id = "name_input">
-                    <form action="main.html">
-                        <input type='text' name='ghost_name' id ="name_input_box">
-                        <br><input type="submit" value = "OK"><br>
-                    </form>
+
+                <div id = "clock"><img src="assets/clock.PNG"></div>
+
+                <div class = 'action_buttons_container'>
+                    <div id = "love"><img src="assets/heartbutton.PNG"></div>
+                    <div id = "chat"><img src= "assets/chatbutton.PNG"></div>
+                    <div id = "music"><img src = "assets/musicbutton.PNG"></div>
                 </div>
+                <div id = "textbox"> Boo's &nbsp;&nbsp;feeling &nbsp;&nbsp;lonely. </div>
 
             </div>
 
