--- a/week11/index.html
+++ b/week11/index.html
@@ -27,9 +27,10 @@
                 </div>
 
                 <div id = "name_input">
-                    <form action="main.html">
-                        <input type='text' name='ghost_name' id ="name_input_box">
-                        <br><input type="submit" value = "OK"><br>
+                    <form action="#nameForm" id="nameForm">
+                        <input type='text' id ="ghost_name">
+                        <input type="submit" value = "OK" id="name_form_submit" >
+                        
                     </form>
                 </div>
 
