--- a/week11/main.html
+++ b/week11/main.html
@@ -12,11 +12,10 @@
 
     <body>
         <main>
-            
-            <h1>Play &nbsp;&nbsp;with &nbsp;&nbsp;Boo!</h1>
+            <h1>Let's Play!</h1>
 
             <div id = "game_container">
-                
+
 
                 <div id = "status_bar">
                     <img id = "status_img" src="assets/redbar.PNG">
@@ -34,7 +33,9 @@
                     <div id = "chat"><img src= "assets/chatbutton.PNG"></div>
                     <div id = "music"><img src = "assets/musicbutton.PNG"></div>
                 </div>
-                <div id = "textbox"> Boo's &nbsp;&nbsp;feeling &nbsp;&nbsp;lonely. </div>
+                <!-- <div id = "textbox"> Boo's &nbsp;&nbsp;feeling &nbsp;&nbsp;lonely. </div> -->
+                <div id = "textbox"> Play &nbsp;&nbsp;with &nbsp;&nbsp;me!</div>
+
 
             </div>
 
