background and name input

--- a/week11/main.html
+++ b/week11/main.html
@@ -12,10 +12,10 @@
 
     <body>
         <main>
-            <h1>Let's Play!</h1>
+            <h1> It&nbsp;&nbsp; looks&nbsp;&nbsp; friendly!</h1>
 
             <div id = "game_container">
-
+                <div class="background_box"></div>
 
                 <div id = "status_bar">
                     <img id = "status_img" src="assets/redbar.PNG">
@@ -24,7 +24,6 @@
                 <div id = "ghost">
                     <img id = "ghost_img" src="assets/normalboo.PNG"> 
                 </div>
-
 
                 <div id = "clock"><img src="assets/clock.PNG"></div>
 
@@ -35,8 +34,6 @@
                 </div>
                 <!-- <div id = "textbox"> Boo's &nbsp;&nbsp;feeling &nbsp;&nbsp;lonely. </div> -->
                 <div id = "textbox"> Play &nbsp;&nbsp;with &nbsp;&nbsp;me!</div>
-
-
             </div>
 
         </main>
