--- a/final/home.html
+++ b/final/home.html
@@ -23,7 +23,7 @@
                 <ul class="nav_links">
                     <li><a href ="home.html">Home</a></li>
                     <li><a href = "about.html">About</a></li>
-                    <li><a href = "work.html">Work</a></li>
+                    <li><a href = "index.html">Work</a></li>
                 </ul>
 
                 <div class = "burger">
@@ -35,12 +35,8 @@
             </nav>
 
             
-            <div id="instructions">
-                <p>To get started, select a timer mode and click play.</p>
-            </div>
-
-            <div id='timer_container'>
-                <div class="timer"></div>
+            <div id="instructions" style="text-align: center; font-size: 30px">
+                <p>Home</p>
             </div>
             
             <div id ="log_container">
