--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta name="viewport" content = "width=device-width, inital-scale=1.0">
         <meta charset="utf-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Winnie Zheng's Web Development Portfolio</title>
         <link rel='stylesheet' type ='text/css' href='theStyle.css'>
     </head>
@@ -15,11 +19,16 @@
                 <h3 id="author">Winnie Zheng</h3>
             </div>
 
-            <div class = "content-container">
-                <h4 class = 'content-scroll-page'><a href="week1.html">Week 1: Long Live the Web</a></h4>
-                <h4 class = 'content-scroll-page'><a href="week2.html">Week 2: Ways of Seeing</a></h4>
-                <h4 class = 'content-scroll-page'><a href = "/week6/pages">Week 6: Out 4 Pizza</a></h4>
-                <h4 class = 'content-scroll-page'><a href = "/week7">Week 7: CODE</a></h4>
+            <div class = "section">
+                <h4><a href="week1.html">Week 1: Long Live the Web</a></h4>
+                <h4><a href="week2.html">Week 2: Ways of Seeing</a></h4>
+                <h4><a href = "/week6/pages">Week 6: Out 4 Pizza</a></h4>
+                <h4><a href = "/week7">Week 7: CODE</a></h4>
+                <h4><a href = "/week9">Week 9: CODE 2.0</a></h4>
+                <h4><a href = "/week10">Week 10: Medium is the Message</a></h4>
+                <h4><a href = "/week11">Boo the Ghost! Game</a></h4>
+                <h4><a href = "/week12">Ideas for final</a></h4>
+                <h4><a href = "/final">Final: Pomodoro</a></h4>
             </div>
         </main>
     </body>
